--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.3.1"
-  }
+    "inquirer": "^6.5.2"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/McGhee01/ProGenerator.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/McGhee01/ProGenerator/issues"
+  },
+  "homepage": "https://github.com/McGhee01/ProGenerator#readme"
 }
